@@ -1,1 +1,1 @@
-10.11.0-rc2
+10.11.0
